--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100&family=Open+Sans:ital,wght@1,800&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
 </head>
 <body>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente laudantium laboriosam maxime quis alias dicta quae dignissimos pariatur, veritatis necessitatibus?</p>
