--- a/index.html
+++ b/index.html
@@ -24,7 +24,33 @@
             </ul>
             <a href="#" class="btn">Subscribe</a>
         </nav>
-
+        <div class="content">
+            <h4>Hello, my name is</h4>
+            <h1>ShoFiur <span>Rahman</span></h1>
+            <h3>I'am a web Developer.</h3>
+            <div class="newslatter">
+                <form>
+                    <input type="email" name="mail" id="mail" placeholder="Enter Your Emil">
+                    <input type="submit" name="submit"
+                    value="Lets start">
+                </form>
+            </div>
+        </div>
     </div>
+    <!--hero end-->
+    <!--About section start-->
+    <section class="about">
+        <div class="main">
+            <img src="/img2.jpg" alt="">
+            <div class="about-text">
+                <h2>About Me</h2>
+                <h5>Developer & Designer</h5>
+                <p>I am a front-end web Developer. I can provide clean code and pixel perfect desing. I also make the Website more & more interactive with web animations.A responsive desing makes your website accessible to all users, regardless of their device.</p>
+                <button type="button">Let's Talk</button>
+
+            </div>
+        </div>
+    </section>
+    <!--About end-->
 </body>
 </html>
