about end commit

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <!--About section start-->
     <section class="about">
         <div class="main">
-            <img src="/img2.jpg" alt="">
+            <img src="/IO.jpg" alt="">
             <div class="about-text">
-                <h2>About Me</h2>
-                <h5>Developer & Designer</h5>
+                <h2>About <span>Me</span></h2>
+                <h5><span>Developer &</span> Designer</h5>
                 <p>I am a front-end web Developer. I can provide clean code and pixel perfect desing. I also make the Website more & more interactive with web animations.A responsive desing makes your website accessible to all users, regardless of their device.</p>
                 <button type="button">Let's Talk</button>
 
