--- a/index.html
+++ b/index.html
@@ -97,5 +97,23 @@
         </div>
     </div>
     <!---Service end-->
+    <!--contact start-->
+    <div class="contact-me">
+        <p>Let Me Get You A Beautiful Website.</p>
+        <a class="button-two" href="#">Hire Me</a>
+    </div>
+    <!--contact End-->
+    <!--footer start-->
+    <footer>
+        <p>ShoFiur Rahman</p>
+        <p>Make a Beautiful Website - Please click on the link below to subscrib to my channel.</p>
+        <div class="social">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
+        <p class="end">CopyRight By Shofiur Rahman</p>
+    </footer>
+    <!--footer end-->
 </body>
 </html>
